# App-parser

./: .dockerignore  .gitignore  .gitignore copy  Dockerfile  Dockerfile copy  README.md  docker-compose.override.yml  docker-compose.yml  main.ipynb  main_train.ipynb  pyproject.toml  run_app.py  speed_test_prepare.py  test.py  test_db.py  test_order.py  test_train.py  train.ipynb
backend/: __init__.py
backend copy/ssl/: cert.pem
backend/Dataset/: __init__.py  dataset.py  indicators.py  loader.py  models.py
backend/MMM/: __init__.py  agent.py  agent_manager.py  agent_news.py  agent_pread_time.py  agent_risk.py  agent_trade.py  agent_trade_time.py  model_pred.py  model_trade.py  order_manager.py  shems_dataset.py
backend/SandboxApp/: __init__.py  sandbox.py
backend/app/: create_app.py  main.py  router_main.py
backend/database/: __init__.py  database.py
backend/ssl/: key.pem
backend/train_models/: __init__.py  data_layer.py  loader.py  parsing_schem.py  sandbox_risk.py  transform_data.py
core/: __init__.py  data_manager.py
core copy/: __init__.py  data_manager.py
core copy/utils/: __init__.py  configure_logging.py  decoraters.py  error_handler_logging.py
core/alembic/: env.py
core/data_manager/: DataManager.py
core/database/: __init__.py  database.py  engine.py  models.py  orm_query.py
core/models/: models.py
core/settings/: config.py
core/utils/: clear_datasets.py  (+2 more)
data/: coins_list.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
settings/: .prod
tests/: test_model.py  test_model_trade.py
(+108 files in other folders)
