[project]
name = "postgresdocker"
version = "0.1.0"
description = ""
authors = [
    {name = "igornet0"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic[email] (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "greenlet (>=3.2.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "einops (>=0.8.1,<0.9.0)",
    "coremltools (>=8.3.0,<9.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pyobjc (>=11.0,<12.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.9)",
    "accelerate (>=1.6.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

